// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Anchor > has accent variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/accent"
  >
    accent link
  </a>
</DocumentFragment>
`;

exports[`Anchor > has default variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/default"
  >
    default link
  </a>
</DocumentFragment>
`;

exports[`Anchor > has error variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/error"
  >
    error link
  </a>
</DocumentFragment>
`;

exports[`Anchor > has info variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/info"
  >
    info link
  </a>
</DocumentFragment>
`;

exports[`Anchor > has link variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/link"
  >
    link link
  </a>
</DocumentFragment>
`;

exports[`Anchor > has neutral variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/neutral"
  >
    neutral link
  </a>
</DocumentFragment>
`;

exports[`Anchor > has primary variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/primary"
  >
    primary link
  </a>
</DocumentFragment>
`;

exports[`Anchor > has secondary variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/secondary"
  >
    secondary link
  </a>
</DocumentFragment>
`;

exports[`Anchor > has success variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/success"
  >
    success link
  </a>
</DocumentFragment>
`;

exports[`Anchor > has warning variant 1`] = `
<DocumentFragment>
  <a
    class="link transition-all link-hover no-underline"
    href="/variant/warning"
  >
    warning link
  </a>
</DocumentFragment>
`;

exports[`Anchor > renders a link with correct label 1`] = `
<DocumentFragment>
  <a
    class="link transition-all no-underline"
    href="/home?hello=world#great"
  >
    Go Home 🏡
  </a>
</DocumentFragment>
`;

exports[`Anchor > renders an external Anchor 1`] = `
<DocumentFragment>
  <a
    class="link transition-all no-underline"
    href="https://example.com"
    rel="noopener noreferrer"
    target="_blank"
  >
    Google.com
    <svg
      aria-hidden="true"
      class="lucide lucide-external-link ml-[2px] inline w-4 h-4"
      fill="none"
      height="24"
      name="external"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 3h6v6"
      />
      <path
        d="M10 14 21 3"
      />
      <path
        d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
      />
    </svg>
  </a>
</DocumentFragment>
`;
